pinniped-supervisor/pinniped-supervisor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: pinniped-supervisor
    kapp.k14s.io/app: "1640222484416467000"
    kapp.k14s.io/association: v1.d2a728f04ed546621a2d652434fd215d
  name: pinniped-supervisor
  namespace: pinniped-supervisor
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: pinniped-supervisor
    kapp.k14s.io/app: "1640222484416467000"
status:
  loadBalancer: {}
